# monorepo-example

./: .gitignore  .lintstagedrc.json  .npmrc  .prettierignore  README.md  commitlint.config.ts  cspell.json  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.ts  tsconfig.json  turbo.json
.cspell/: custom-dictionary.txt
.husky/: commit-msg  pre-push
apps/backend/: .env.example  .env.pytest.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README-CN.md  README.md  docker-compose-pytest.yml  docker-compose.yml  justfile  logging.ini  package.json  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: __init__.py
apps/backend/docs/: GIT-CN.md  GIT.md
apps/backend/scripts/: initdb.sh  run-dev.sh
apps/backend/scripts/alembic/: downgrade.sh  makemigrations.sh  migrate.sh
apps/backend/scripts/celery/: beat-run.sh  cleanup.sh  worker-run.sh
apps/backend/scripts/check/: coverage-cleanup.sh  coverage-run.sh  lint.sh  pytest-run.sh
apps/backend/scripts/monorepo/: install.sh  mypy.sh  ruff.sh  run.sh  venv.sh
apps/backend/src/: initdb.py  main.py
apps/backend/src/api/: wrold.py
apps/backend/src/api/v1/: __init__.py  auth.py  roles.py  router.py
apps/backend/src/api/v2/: __init__.py
apps/backend/src/core/: config.py  database.py  environment.py  exceptions.py  lifecycle.py  redis_client.py  route.py
apps/backend/src/crud/: __init__.py  auth.py  crud_sqlmodel.py  role.py  router.py
apps/backend/src/middlewares/: __init__.py  logger.py
apps/backend/src/models/: __init__.py  auth.py  base.py  router.py  schedule.py
apps/backend/src/queues/: __init__.py  app.py  celery.py  models.py  scheduler.py  task.py
apps/backend/src/queues/tasks/: tasks.py
apps/backend/src/schemas/: __init__.py  auth.py  base.py  request.py  response.py  role.py  router.py
apps/backend/src/services/: auth.py  roles.py
apps/backend/src/utils/: constants.py  date.py  minio_client.py  security.py  utils.py  uuid7.py  validate.py
apps/backend/src/websockets/: __init__.py  app.py  params.py  server.py
apps/backend/src/websockets/dependencies/: __init__.py  core.py  utils.py
apps/backend/src/websockets/events/: __init__.py  connection.py
apps/backend/tests/: conftest.py  utils.py
apps/backend/tests/auth/: __init__.py  test_login.py
apps/backend/tests/crud/: __init__.py  test_redis_base.py  test_sql_base.py
apps/desktop/: CHANGELOG.md  electron.build.ts  package.json
apps/desktop/src/core/: main.ts
apps/desktop/src/preload/: index.ts
apps/electron/: package.json  tsconfig.json  vite.config.ts
apps/electron/src/: index.ts
apps/web/: .env  .env.test  CHANGELOG.md  package.json  tsconfig.json  uno.config.ts  vite.config.ts
apps/web/builder/config/: proxy.ts
apps/web/builder/plugins/: devtools.ts  html.ts  i18n.ts  index.ts  router.ts  unocss.ts  unplugin.ts
apps/web/scripts/: gen-i18n-types.ts
apps/web/src/: App.vue  index.ts
apps/web/src/components/: HelloWorld.vue
apps/web/src/components/advanced/: table-column-setting.vue  table-header-operation.vue
apps/web/src/components/common/: app-provider.vue  dark-mode-container.vue  exception-base.vue  (+8 more)
apps/web/src/constants/: app.ts  business.ts  common.ts
apps/web/src/locales/: dayjs.ts  index.ts  locale.ts  naive.ts
apps/web/src/materials/: index.ts
apps/web/src/plugins/: app.ts  dayjs.ts  loading.ts  nprogress.ts
apps/web/src/router/: index.ts
apps/web/src/store/: index.ts
apps/web/src/theme/: settings.ts  vars.ts
apps/web/src/typings/: app.d.ts  common.d.ts  components.d.ts  global.d.ts  i18n.d.ts  naive-ui.d.ts  router.d.ts  storage.d.ts  union-key.d.ts  vite-env.d.ts
apps/web/src/utils/: agent.ts  common.ts  service.ts  storage.ts
scripts/: build.js  dev.js  rollup.config.generator.js
(+150 files in other folders)
